; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/steering/extr_dr_ste.c_dr_ste_set_always_miss.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/steering/extr_dr_ste.c_dr_ste_set_always_miss.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dr_hw_ste_format = type { i32*, i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dr_hw_ste_format*)* @dr_ste_set_always_miss to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dr_ste_set_always_miss(%struct.dr_hw_ste_format* %0) #0 {
  %2 = alloca %struct.dr_hw_ste_format*, align 8
  store %struct.dr_hw_ste_format* %0, %struct.dr_hw_ste_format** %2, align 8
  %3 = load %struct.dr_hw_ste_format*, %struct.dr_hw_ste_format** %2, align 8
  %4 = getelementptr inbounds %struct.dr_hw_ste_format, %struct.dr_hw_ste_format* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 0
  store i32 220, i32* %6, align 4
  %7 = load %struct.dr_hw_ste_format*, %struct.dr_hw_ste_format** %2, align 8
  %8 = getelementptr inbounds %struct.dr_hw_ste_format, %struct.dr_hw_ste_format* %7, i32 0, i32 1
  %9 = load i64*, i64** %8, align 8
  %10 = getelementptr inbounds i64, i64* %9, i64 0
  store i64 0, i64* %10, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
